--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-%!TEX program = PdfLaTex+MakeIndex+BibTex
+%!TEX program = XeLaTex
 % Made with modernCV: https://github.com/xdanaux/moderncv
 
 % moderncv definition
@@ -11,7 +11,7 @@
 
 % Manage page size
 %\RequirePackage[scale=0.9]{geometry}
-\RequirePackage[left=0.5in,right=0.5in,top=0.8in,bottom=0.8in]{geometry}
+\RequirePackage[left=0.5in,right=0.5in,top=0.9in,bottom=0.9in]{geometry}
 
 % Manage encoding
 \RequirePackage[utf8]{inputenc}
