--- a/publications.tex
+++ b/publications.tex
@@ -10,8 +10,18 @@
 
 \subsection*{\texorpdfstring{\faBook\ Peer-Reviewed Journal Articles}{Peer-Reviewed Journal Articles}}
 %\subsection*{Peer-Reviewed Journal Articles}
-%\begin{enumerate}
-\begin{etaremune}
+\begin{enumerate}
+%\begin{etaremune}
+\item
+    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
+    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
+    \textit{Applied Energy}. %\textit{10}(2), 55-69
+    \textit{Accepted}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
+\item
+    PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
+    The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
+    \textit{Acta Scientiae Circumstantiae}. %\textit{10}(2), 55-69
+    \textit{Accepted}. [CSCD, in Chinese] %\DOI{10.3390/atmos10020055}
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
@@ -56,13 +66,13 @@
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
     \textit{Geomatics World}. \textit{23}(3), 20-26.
     \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese]
-\end{etaremune}
-%\end{enumerate}
+%\end{etaremune}
+\end{enumerate}
 
 %\subsection*{Book Chapter}
 \subsection*{\texorpdfstring{\faBook\ Book Chapter}{Book Chapter}}
-%\begin{enumerate}
-\begin{etaremune}
+\begin{enumerate}
+%\begin{etaremune}
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2019).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
@@ -72,13 +82,13 @@
 	Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China.
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
     \DOI{10.1061/9780784481042.028}. [EI]
-\end{etaremune}
-%\end{enumerate}
+%\end{etaremune}
+\end{enumerate}
 
 %\subsection*{Papers submitted/under revision}
 \subsection*{\texorpdfstring{\faBook\ Papers submitted/under revision}{Papers submitted/under revision}}
-%\begin{enumerate}
-\begin{etaremune}
+\begin{enumerate}
+%\begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren.
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
@@ -91,16 +101,14 @@
     SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
     (\Revision).
-\item
-    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.
-    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    (\Revision).
-\end{etaremune}
-%\end{enumerate}
+%\end{etaremune}
+\end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ Patent}{Patent}}
-\begin{etaremune}
+%\begin{etaremune}
+\begin{enumerate}
 \item
      Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
      (\textit{under apply}).
-\end{etaremune}
+%\end{etaremune}
+\end{enumerate}
