--- a/cv.tex
+++ b/cv.tex
@@ -11,7 +11,7 @@
 
 % Manage page size
 %\RequirePackage[scale=0.9]{geometry}
-\RequirePackage[left=0.5in,right=0.5in,top=0.9in,bottom=0.9in]{geometry}
+\RequirePackage[left=0.5in,right=0.5in,top=0.8in,bottom=0.8in]{geometry}
 
 % Manage encoding
 \RequirePackage[utf8]{inputenc}
@@ -35,8 +35,10 @@
 \newcommand{\mycomment}[1]{\cvitem{}{\small{#1}}}
 \newcommand{\mycvitemcomment}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\vfill\small{#3}}}
 \newcommand{\mycvitemac}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\hfill\textbf{#3}}}
+\newcommand{\mycvitemacl}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\vfill\hfill\textbf{#3}}}
 \newcommand{\mycvitemEDU}[8]{\cvitem{\faCalendarO\hfill{#1}}{\textbf{#2}, \textit{#3}, {#4}\vfill{#5}\vfill{Thesis:}\textit{#6}\vfill{Major in }{#7}\hfill\faMapMarker\ {#8}}}
 \newcommand{\mycvitemPP}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\hfill\faMapMarker\ {#3}}}
+\newcommand{\mycvitemPPl}[3]{\cvitem{\faCalendarO\hfill{#1}}{{#2}\vfill\hfill\faMapMarker\ {#3}}}
 \newcommand{\mycvitemXP}[4]{\cvitem{\faCalendarO\hfill{#1}}{\textbf{#2}, \textit{#3}\vfill\hfill\faMapMarker\ {#4}}}
 
 % Identifying information
