--- a/awards.tex
+++ b/awards.tex
@@ -1,21 +1,21 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
-\mycvitemPP{2019.01}{The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China}{China}
+\mycvitemPPl{2019.01}{The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China}{China}
 \mycvitemPP{2018.11}{National Scholarship for M.Sc[\textit{top 2-3\%}]}{China}
 \mycvitemPP{2018.10}{The National 3rd Prize in Urban Big Data Special Committee, Chinese Society for Urban Studies the 2nd Big Data Support Spatial Planning and Design Competition}{China}
 \mycvitemPP{2018.07}{'Applied Energy' 2018 Summer School Certification}{Beijing, China}
-\mycvitemPP{2018.06}{Merit Students in the academic year 2017-2018, University of Chinese Academy of Sciences}{Beijing, China}
+\mycvitemPPl{2018.06}{Merit Students in the academic year 2017-2018, University of Chinese Academy of Sciences}{Beijing, China}
 \mycvitemPP{2018.06}{The 2nd Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 15\%}]}{Xiamen, China}
-\mycvitemPP{2018.06}{The 1st Scholarship of Institute of Urban Environment, Chinese Academy of Sciences}{Xiamen, China}
-\mycvitemPP{2018.03}{The National Winning Award in National Science \& Technology Infrastructure Center, 2017 'Sharing Cup' College Student Science and Technology Resource Sharing Service Innovation Contest}{China}
+\mycvitemPPl{2018.06}{The 1st Scholarship of Institute of Urban Environment, Chinese Academy of Sciences}{Xiamen, China}
+\mycvitemPPl{2018.03}{The National Winning Award in National Science \& Technology Infrastructure Center, 2017 'Sharing Cup' College Student Science and Technology Resource Sharing Service Innovation Contest}{China}
 \mycvitemPP{2017.10}{'Excellent Volunteer' award of 15th User Conference of Esri China}{China}
-\mycvitemPP{2017.06}{Merit Students in the academic year 2016-2017, University of Chinese Academy of Sciences}{Beijing, China}
+\mycvitemPPl{2017.06}{Merit Students in the academic year 2016-2017, University of Chinese Academy of Sciences}{Beijing, China}
 \mycvitemPP{2015.11}{The National Winning Award in 2015 Esri Cup National Collegiate Developed Contest in GIS·3D Modeling and Design}{China}
-\mycvitemPP{2015.11}{Inovation Scholoarships in the academic year 2014-2015, Fujian Normal University}{Fuzhou, China}
+\mycvitemPPl{2015.11}{Inovation Scholoarships in the academic year 2014-2015, Fujian Normal University}{Fuzhou, China}
 \mycvitemPP{2015.07}{The National 3rd Prize in the Smart City Special Event Contest,the 14th Challenge Cup National College Students' Extracurricular Academic Science and Technology Works Contest}{China}
 \mycvitemPP{2015.05}{The First Annual Fujian Normal University Student Selection, Scientific and Technological Innovation award and Nomination}{Fuzhou, China}
 \mycvitemPP{2015.03}{The School Wining Award during the 9th Challenge Cup National College Students’ Extracurricular Academic Science and Technology Works Contest}{Fuzhou, China}
-\mycvitemPP{2014.11}{Inovation Scholoarships in the academic year 2013-2014, Fujian Normal University}{Fuzhou, China}
-\mycvitemPP{2014.07}{The National 3rd Prize in 2014 MathorCup Global Collegiate Mathematical Contest in Modeling}{China}
-\mycvitemPP{2014.05}{`Excellent League Cadres' in the academic year 2013-2014, Fujian Normal University}{Fuzhou, China}
+\mycvitemPPl{2014.11}{Inovation Scholoarships in the academic year 2013-2014, Fujian Normal University}{Fuzhou, China}
+\mycvitemPPl{2014.07}{The National 3rd Prize in 2014 MathorCup Global Collegiate Mathematical Contest in Modeling}{China}
+\mycvitemPPl{2014.05}{`Excellent League Cadres' in the academic year 2013-2014, Fujian Normal University}{Fuzhou, China}
 \mycvitemPP{2014.05}{'Excellent League Leader' in the academic year 2013-2014, School of Geographical Sciences, Fujian Normal University}{Fuzhou, China}
 \mycvitemPP{2013.05}{'Excellent League Leader' in the academic year 2012-2013, School of Geographical Sciences, Fujian Normal University}{Fuzhou, China}
