--- a/cnlatex/awards.tex
+++ b/cnlatex/awards.tex
@@ -1,7 +1,7 @@
 \section{\texorpdfstring{\faTrophy\ 奖励 \& 荣誉}{奖励 \& 荣誉}}
 \mycvitemPP{2019.01}{中国生态学学会优秀研究生科研创新作品}{中国}
 \mycvitemPP{2018.11}{2018年硕士国家奖学金[\textit{top 2-3\%}]}{中国}
-\mycvitemPP{2018.10}{中国城市科学研究会城市大数据专业委员会第二届大数据支持空间规划与设计竞赛全国三等奖}{中国}
+\mycvitemPPl{2018.10}{中国城市科学研究会城市大数据专业委员会第二届大数据支持空间规划与设计竞赛全国三等奖}{中国}
 \mycvitemPP{2018.07}{'Applied Energy'2018年暑期学校结业证书}{中国,北京}
 \mycvitemPP{2018.06}{2017-2018学年中国科学院大学三好学生}{中国,北京}
 \mycvitemPP{2018.06}{中国科学院城市环境研究所二等奖学金[\textit{top 15\%}]}{中国,厦门}
