--- a/cnlatex/presentation.tex
+++ b/cnlatex/presentation.tex
@@ -1,7 +1,7 @@
 \section{\texorpdfstring{\faCommentsO\ 汇报}{汇报}}
-\mycvitemXP{2018.05.27}{地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战}{第十一届中国R语言会议}{中国,北京人民大学}
+\mycvitemXP{2018.05.27}{\songti{地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战}}{\songtix{第十一届中国R语言会议}}{中国,北京人民大学}
 \mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{中国,北京国家会议中心}
-\mycvitemXP{2017.11.11}{城市形态的PM2.5环境效应——以京津冀城市群为例}{第九届中国景观生态学学术研讨会}{中国,广州三寓宾馆}
-\mycvitemXP{2017.09.28}{基于InVEST与环境物联网的城市森林生态服务功能评估平台(\textbf{受邀})}{第二届城市环境长期观测与可持续发展研讨会}{中国,上海师范大学}
-\mycvitemXP{2016.11.27}{城市步行环境的犯罪地理分析}{时空间行为与城市社会规划研究暨第十二次空间行为与规划研讨会}{中国,北京联合大学}
+\mycvitemXP{2017.11.11}{\songti{城市形态的PM2.5环境效应——以京津冀城市群为例}}{\songtix{第九届中国景观生态学学术研讨会}}{中国,广州三寓宾馆}
+\mycvitemXP{2017.09.28}{\songti{基于InVEST与环境物联网的城市森林生态服务功能评估平台(\textbf{受邀})}}{\songtix{第二届城市环境长期观测与可持续发展研讨会}}{中国,上海师范大学}
+\mycvitemXP{2016.11.27}{\songti{城市步行环境的犯罪地理分析}}{\songtix{时空间行为与城市社会规划研究暨第十二次空间行为与规划研讨会}}{中国,北京联合大学}
 \mycvitemXP{2016.07.01}{Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District}{10th annual conference of International Association of China Planning}{中国,北京大学}
