--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -1,9 +1,10 @@
 % AGU style: https://publications.agu.org/agu-grammar-and-style-guide/
-\newcommand{\Revision}{\textit{返修}}
-\newcommand{\Review}{\textit{审稿}}
-\newcommand{\Submitted}{\textit{投稿}}
+\newcommand{\Revision}{\songtix{返修}}
+\newcommand{\Review}{\songtix{审稿}}
+\newcommand{\Submitted}{\songtix{投稿}}
 \newcommand{\CS}{*} % corresponding author
 \newcommand{\CF}{\textsuperscript{\#}} % co-first author
+
 
 \section{\texorpdfstring{\faBook\ 出版物}{出版物}}
 \CS 通讯作者, \CF 共同第一作者.
@@ -16,12 +17,12 @@
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. %\textit{10}(2), 55-69
-    \textit{接收}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
+    {\heiti{接收}}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
 \item
-    窦攀烽, 左舒翟, 任引, \textbf{戴劭勍}, 云国梁. (2019).
+    窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
-    \textit{环境科学学报}. %\textit{10}(2), 55-69
-    \textit{接收}. [CSCD, 复合影响因子=2.544] %\DOI{10.3390/atmos10020055}
+    {\songtix{环境科学学报}}. %\textit{10}(2), 55-69
+    {\heiti{接收}}. [CSCD, 复合影响因子=2.544] %\DOI{10.3390/atmos10020055}
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
@@ -38,9 +39,9 @@
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
 \item
-    \textbf{戴劭勍}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
+    {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
-    \textit{地理科学}.  \textit{38}(8), 1235-1244
+    {\songtix{地理科学}}.  \textit{38}(8), 1235-1244
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子=3.964]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
@@ -48,9 +49,9 @@
     \textit{Remote Sensing}. \textit{10}(4), 521-538
     \DOI{10.3390/rs10040521}. [SCI, IF = 3.406]
 \item
-    叶琴, 曾刚, \textbf{戴劭勍}, 王丰龙. (2018).
+    叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
-    \textit{中国人口·资源与环境}. \textit{210}(02), 115-122.
+    {\songtix{中国人口·资源与环境}}. \textit{210}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子=5.211]
 \item
     SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
@@ -62,9 +63,9 @@
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
     \DOI{10.1080/10042857.2017.1418273}. [ESCI]
 \item
-   李苗裔, \textbf{戴劭勍}, 王静远, 沈振江. (2016).
+   李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
-    \textit{地理信息世界}. \textit{23}(3), 20-26.
+    {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
     \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子=0.935]
 %\end{etaremune}
 \end{enumerate}
@@ -90,15 +91,15 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, \& Y. Ren.
+    \Shaoqing, SD. Zuo,  Y. Ren.
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
     (\Submitted).
 \item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren.
+    \Shaoqing\CF, XM. Zheng, SD. Zuo,  Y. Ren.
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
     (\Submitted).
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
+    SD. Zuo, \Shaoqing, Y. Ren, R. Zhou,   ZW. Yu.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
     (\Revision).
 %\end{etaremune}
@@ -107,8 +108,8 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
-     陈奇, 任引, 郑小曼, 左舒翟, \textbf{戴劭勍}.
+     陈奇, 任引, 郑小曼, 左舒翟, {\heiti{戴劭勍}}.
      一种预测大面积亚热带森林生物量的混合效应模型.
-     (\textit{实审}).
+     ({\songtix{实审}}).
 %\end{etaremune}
 \end{enumerate}
