--- a/publications.tex
+++ b/publications.tex
@@ -16,12 +16,12 @@
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. %\textit{10}(2), 55-69
-    \textit{Accepted}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
+    \textbf{Accepted}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
 \item
     PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
     \textit{Acta Scientiae Circumstantiae}. %\textit{10}(2), 55-69
-    \textit{Accepted}. [CSCD, in Chinese] %\DOI{10.3390/atmos10020055}
+    \textbf{Accepted}. [CSCD, in Chinese] %\DOI{10.3390/atmos10020055}
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
