--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,15 +14,15 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
-    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    \textit{Applied Energy}. %\textit{10}(2), 55-69
-    {\heiti{接收}}. [SCI, IF = 7.900] %\DOI{10.3390/atmos10020055}.
-\item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. %\textit{10}(2), 55-69
     {\heiti{接收}}. [CSCD, 复合影响因子=2.544] %\DOI{10.3390/atmos10020055}
+\item
+    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
+    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
+    \textit{Applied Energy}. \textit{247}, 254-269
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 7.900]
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
