--- a/awards.tex
+++ b/awards.tex
@@ -1,4 +1,6 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
+\mycvitemPP{2019.06}{The 2nd Grade Scholarship of Yonker Environmental Protection Scholarship}{China}
+\mycvitemPP{2019.06}{The 1st Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 3}]}{Xiamen, China}
 \mycvitemPPl{2019.01}{The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China}{China}
 \mycvitemPP{2018.11}{National Scholarship for M.Sc[\textit{top 2-3\%}]}{China}
 \mycvitemPP{2018.10}{The National 3rd Prize in Urban Big Data Special Committee, Chinese Society for Urban Studies the 2nd Big Data Support Spatial Planning and Design Competition}{China}
