--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -54,10 +54,6 @@
     {\songtix{中国人口·资源与环境}}. \textit{210}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子=5.211]
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
-    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
-    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
-\item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
@@ -86,20 +82,36 @@
 %\end{etaremune}
 \end{enumerate}
 
+\subsection*{\texorpdfstring{\faBook\ 会议论文}{会议论文}}
+\begin{enumerate}
+\item
+    \Shaoqing, SD. Zuo, Y. Ren. (2018).
+    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
+    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
+\item
+    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
+    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
+    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
+    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
+\end{enumerate}
+
 %\subsection*{Papers submitted/under revision}
 \subsection*{\texorpdfstring{\faBook\ 投稿/返修论文}{投稿/返修论文}}
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo,  Y. Ren.
-    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
+    \Shaoqing, SD. Zuo, Y. Ren.
+   A theoretical framework for uncertainty analysis of CO$_2$ emissions gridded maps. 
     (\Submitted).
 \item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo,  Y. Ren.
-    Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
-    (\Submitted).
+    \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
+    Improving non-representative-sample prediction of forest aboveground biomass maps: A combined machine learning and spatial statistical approach. 
+    (\Review).
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, R. Zhou,   ZW. Yu.
+    SD. Zuo, \Shaoqing, Y. Ren.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
     (\Revision).
 %\end{etaremune}
@@ -108,8 +120,22 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
+     任引, {\heiti{戴劭勍}}, 左舒翟, 郑小曼.
+     一种多源数据融合的森林资源清查生物量估算模型.
+     ({\songtix{受理}}).
+\item
      陈奇, 任引, 郑小曼, 左舒翟, {\heiti{戴劭勍}}.
      一种预测大面积亚热带森林生物量的混合效应模型.
      ({\songtix{实审}}).
 %\end{etaremune}
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 软件著作权}{软件著作权}}
+\begin{enumerate}
+\item
+   基于环境物联网与 InVEST 的水安全监测系统. V1.0.
+    \textit{受理号: 2018sr745897}. (2019).
+\item
+    基于环境物联网数据的水源涵养监测系统. V1.0.
+    \textit{受理号: 2018sr745897}. (2018).
 \end{enumerate}
