--- a/publications.tex
+++ b/publications.tex
@@ -53,10 +53,6 @@
     \textit{China Population, Resources and Environment}. \textit{210}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
-    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
-    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
-\item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
@@ -85,20 +81,36 @@
 %\end{etaremune}
 \end{enumerate}
 
+\subsection*{\texorpdfstring{\faBook\ Conference Paper}{Conference Paper}}
+\begin{enumerate}
+\item
+    \Shaoqing, SD. Zuo, Y. Ren. (2018).
+    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
+    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
+\item
+    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
+    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
+    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
+    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
+\end{enumerate}
+
 %\subsection*{Papers submitted/under revision}
 \subsection*{\texorpdfstring{\faBook\ Papers submitted/under revision}{Papers submitted/under revision}}
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, \& Y. Ren.
-    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
+    \Shaoqing, SD. Zuo, Y. Ren.
+   A theoretical framework for uncertainty analysis of CO$_2$ emissions gridded maps. 
     (\Submitted).
 \item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren.
-    Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
-    (\Submitted).
+    \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
+    Improving non-representative-sample prediction of forest aboveground biomass maps: A combined machine learning and spatial statistical approach. 
+    (\Review).
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
+    SD. Zuo, \Shaoqing, Y. Ren.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
     (\Revision).
 %\end{etaremune}
@@ -107,8 +119,22 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
+     Y. Ren, \Shaoqing, SD. Zuo, XM. Zheng.
+     A forest inventory biomass estimation model by multi-sources data fusion .
+     (\textit{accepted}).
+\item
      Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
-     (\textit{under apply}).
+     (\Review).
 %\end{etaremune}
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ Software Copyright}{Software Copyright}}
+\begin{enumerate}
+\item
+    A water saftety monitation system based on environmental IOT data and InVEST model. V1.0.
+    \textit{RN: 2018sr745897}. (2019).
+\item
+    A water conservation service monitation system based on environmental IOT data. V1.0.
+    \textit{RN: 2018sr745897}. (2018).
 \end{enumerate}
