--- a/cnlatex/education.tex
+++ b/cnlatex/education.tex
@@ -1,3 +1,3 @@
 \section{\texorpdfstring{\faUniversity\ 教育经历}{教育经历}}
-\mycvitemEDU{2016-2019}{\songti{硕士}}{\songtix{中国科学院城市环境研究所}}{中国科学院大学}{导师: 任引 \ 研究员}{\songtix{耦合生态过程模型与排放清单的城市碳源汇分布空间制图}}{生态学}{中国,厦门}
+\mycvitemEDU{2016-2019}{\songti{硕士}}{\songtix{中国科学院城市环境研究所}}{中国科学院大学}{导师: 任引 \ 研究员}{\songtix{耦合生态过程模型与排放清单的城市碳源汇分布空间制图研究}}{生态学}{中国,厦门}
 \mycvitemEDU{2012-2016}{\songti{学士}}{\songtix{地理科学学院}}{福建师范大学}{导师: 江辉仙 \ 副教授}{\songtix{基于BIM与GIS的智慧校园规划选址与设计——以福建师范大学为例}}{地理科学(国家人才培养基地)}{中国,福州}
