--- a/education.tex
+++ b/education.tex
@@ -1,3 +1,3 @@
 \section{\texorpdfstring{\faUniversity\ Education}{Education}}
-\mycvitemEDU{2016-2019}{M.Sc.}{Institute of Urban Environment,Chinese Academy of Sciences}{University of Chinese Academy of Sciences}{Supervised by Prof. Yin Ren}{Mappping of carbon emission and sink based on coupling ecological processing model with emission inventory}{Ecology}{Xiamen, China}
+\mycvitemEDU{2016-2019}{M.Sc.}{Institute of Urban Environment,Chinese Academy of Sciences}{University of Chinese Academy of Sciences}{Supervised by Prof. Yin Ren}{Creating a Carbon Source and Sink Map by Coupling an Ecological Process Model with an Emission Inventory to Study a Carbon Balance}{Ecology}{Xiamen, China}
 \mycvitemEDU{2012-2016}{B.Sc.}{School of Geographical Sciences}{Fuajian Normal University}{Supervised by A/Prof. Huixian Jiang}{The Planning Location and Design of Smart Campus Based on BIM and GIS:A Case Study of Fujian Normal University}{Geographical Science (National Talents Training Base)}{Fuzhou, China}
