--- a/cn/template-zh.Rmd
+++ b/cn/template-zh.Rmd
@@ -18,9 +18,9 @@ Aside
 个人信息 {#contact}
 --------------------------------------------------------------------------------
 
-- <i class="fa fa-mobile"></i> +86 0592-6190679
+- <i class="fa fa-mobile"></i> +86 0592-18850440994
 - <i class="fa fa-github"></i> [github.com/DaiShaoqing](https://github.com/GISerDaiShaoqing)
-- <i class="fa fa-envelope"></i> sqdai@iue.ac.cn
+- <i class="fa fa-envelope"></i> dsq1993qingge@163.com
 - <i class="fa fa-globe"></i> [homepage](http://gisersqdai.top/mycv/)
 - <i class="fa fa-map"></i> 中国厦门市集美大道1799号
 - <i class="fa fa-building"></i> 中国科学院城市环境研究所
@@ -79,7 +79,7 @@ Main
 
 研究兴趣 {data-icon=heart-o}
 --------------------------------------------------------------------------------
-城市计算; 时空大数据; 生态模型与生态信息学; 生态学、GIS与RS集成;空间统计
+健康地理；城市计算; 时空大数据; 生态模型与生态信息学; 生态学、GIS与RS集成;空间统计
 
 
 开发软件 {data-icon=laptop}
@@ -115,7 +115,7 @@ N/A
 --------------------------------------------------------------------------------
 ### 气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
 
-环境科学学报. [接收]. [CSCD, 复合影响因子=2.544]. 
+环境科学学报. 2019, 39(7), 2398-2409. doi:10.13671/j.hjkxxb.2019.0122. [CSCD, 复合影响因子=2.544]. 
 
 N/A
 
@@ -324,7 +324,7 @@ N/A
 --------------------------------------------------------------------------------
 ###  基于环境物联网与 InVEST 的水安全监测系统. V1.0.
 
-[受理号:2018sr745897].
+[登记号:2019SR0517519].
 
 N/A
 
@@ -335,7 +335,7 @@ N/A
 
 ###  基于环境物联网数据的水源涵养监测系统.
 
-[受理号：2018sr745897].
+[登记号：2018SR745897].
 
 N/A
 
@@ -523,6 +523,15 @@ The Applied Energy Innovation Institute, 清华大学地球系统科学系, Chin
 
 社会兼职 & 学术活动 {data-icon=suitcase}
 --------------------------------------------------------------------------------
+
+### 成员
+
+空间生命历程流行病学研究中心
+
+N/A
+
+2019-
+
 
 ### 志愿者
 
