--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -16,37 +16,37 @@
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
-    {\songtix{环境科学学报}}. %\textit{10}(2), 55-69
-    {\heiti{接收}}. [CSCD, 复合影响因子=2.544] %\DOI{10.3390/atmos10020055}
+    {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子=2.544] 
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    \textit{Applied Energy}. \textit{247}, 254-269
+    \textit{Applied Energy}. \textit{247}, 254-269.
     \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 7.900]
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere}. \textit{10}(2), 55-69
+    \textit{Atmosphere}. \textit{10}(2), 55-69.
     \DOI{10.3390/atmos10020055}. [SCI, IF = 1.704]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
-    \textit{Remote Sensing}. \textit{10}(11), 1814-1832
+    \textit{Remote Sensing}. \textit{10}(11), 1814-1832.
     \DOI{10.3390/rs10111814}. [SCI, IF = 3.406]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
-    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
+    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198.
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
-    {\songtix{地理科学}}.  \textit{38}(8), 1235-1244
+    {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子=3.964]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
-    \textit{Remote Sensing}. \textit{10}(4), 521-538
+    \textit{Remote Sensing}. \textit{10}(4), 521-538.
     \DOI{10.3390/rs10040521}. [SCI, IF = 3.406]
 \item
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
@@ -134,8 +134,8 @@
 \begin{enumerate}
 \item
    基于环境物联网与 InVEST 的水安全监测系统. V1.0.
-    \textit{受理号: 2018sr745897}. (2019).
+    \textit{登记号: 2019SR0517519}. (2019).
 \item
     基于环境物联网数据的水源涵养监测系统. V1.0.
-    \textit{受理号: 2018sr745897}. (2018).
+    \textit{登记号: 2018SR745897}. (2018).
 \end{enumerate}
