--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -82,13 +82,13 @@
 	% Date of birth
 	%\faCalendarO\ 1982-05-14\\
     	% Phone number
-     \faMobile\ +86-(0)592-6190679\\
+     \faMobile\ +86-(0)592-18850440994\\
 	% Twitter
 	%\faTwitter\ \myuline{\href{https://twitter.com/gau/}{\nolinkurl{@gau}}}\\
 	% Github
 	\faGithub\ \myuline{\href{https://github.com/GISerDaiShaoqing}{\nolinkurl{@Daishaoqing}}}\\
 	% Email
-	\faEnvelope\ \myuline{\href{mailto:sqdai@iue.ac.cn}{\nolinkurl{sqdai@iue.ac.cn}}}\\
+	\faEnvelope\ \myuline{\href{mailto:dsq1993qingge@163.com}{\nolinkurl{dsq1993qingge@163.com}}}\\
 	% Website
 	\faGlobe\ \myurl{http://gisersqdai.top/mycv/}\\
      	% Address
