--- a/interests.tex
+++ b/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
 \section{\texorpdfstring{\faInfoCircle\ Research Interests}{Research Interests}}
-\cvitem{}{Urban Computing; Spatial-Temporal Big Data; Ecological Modeling and Ecoinformatics; Intergration of Ecology, GIS and RS; Spatial Statistics}
+\cvitem{}{Health Geography; Urban Computing; Spatial-Temporal Big Data; Ecological Modeling and Ecoinformatics; Intergration of Ecology, GIS and RS; Spatial Statistics}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
