--- a/publications.tex
+++ b/publications.tex
@@ -15,37 +15,37 @@
 \item
     PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
-    \textit{Acta Scientiae Circumstantiae}. %\textit{10}(2), 55-69
-    \textbf{Accepted}. [CSCD, in Chinese] %\DOI{10.3390/atmos10020055}
+    \textit{Acta Scientiae Circumstantiae}. \textit{39}(7), 2398-2409.
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, in Chinese] 
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    \textit{Applied Energy}. \textit{247}, 254-269
+    \textit{Applied Energy}. \textit{247}, 254-269.
     \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 7.900]
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere}. \textit{10}(2), 55-69
+    \textit{Atmosphere}. \textit{10}(2), 55-69.
     \DOI{10.3390/atmos10020055}. [SCI, IF = 1.704]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
-    \textit{Remote Sensing}. \textit{10}(11), 1814-1832
+    \textit{Remote Sensing}. \textit{10}(11), 1814-1832.
     \DOI{10.3390/rs10111814}. [SCI, IF = 3.406]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
-    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
+    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198.
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
 \item
     \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
-    \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244
+    \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244.
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
-    \textit{Remote Sensing}. \textit{10}(4), 521-538
+    \textit{Remote Sensing}. \textit{10}(4), 521-538.
     \DOI{10.3390/rs10040521}. [SCI, IF = 3.406]
 \item
     Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2018).
@@ -133,8 +133,8 @@
 \begin{enumerate}
 \item
     A water saftety monitation system based on environmental IOT data and InVEST model. V1.0.
-    \textit{RN: 2018sr745897}. (2019).
+    \textit{RN: 2019SR0517519}. (2019).
 \item
     A water conservation service monitation system based on environmental IOT data. V1.0.
-    \textit{RN: 2018sr745897}. (2018).
+    \textit{RN: 2018SR745897}. (2018).
 \end{enumerate}
