--- a/activities.tex
+++ b/activities.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faGroup\ Professional Societies \& Activities}{Professional Societies \& Activities}}
+\mycvitemac{from 2019}{International Initiative on Spatial Lifecourse Epidemiology (ISLE)}{Member}
 \mycvitemac{from 2015}{The Subscription Accounts "Sustainable City·Transportation"}{Volunteer}
 \mycvitemac{from 2017}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
