--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faGroup\ 社会兼职  \& 学术活动}{社会兼职  \& 学术活动}}
+\mycvitemac{自2019}{空间生命历程流行病学研究中心}{\songti{成员}}
 \mycvitemac{自2015}{微信公众号'一览众山小 可持续城市与交通'}{\songti{志愿者}}
 \mycvitemac{自2017}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
