--- a/publications.tex
+++ b/publications.tex
@@ -21,22 +21,22 @@
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 7.900]
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 8.426]
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55-69.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 1.704]
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.046]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814-1832.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 3.406]
+    \DOI{10.3390/rs10111814}. [SCI, IF = 4.118]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
+    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.468]
 \item
     \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
@@ -46,7 +46,7 @@
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521-538.
-    \DOI{10.3390/rs10040521}. [SCI, IF = 3.406]
+    \DOI{10.3390/rs10040521}. [SCI, IF = 4.118]
 \item
     Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
@@ -104,7 +104,7 @@
 \item
     \Shaoqing, SD. Zuo, Y. Ren.
    A theoretical framework for uncertainty analysis of CO$_2$ emissions gridded maps. 
-    (\Submitted).
+    (\Revision).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
     Improving non-representative-sample prediction of forest aboveground biomass maps: A combined machine learning and spatial statistical approach. 
@@ -112,7 +112,7 @@
 \item
     SD. Zuo, \Shaoqing, Y. Ren.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
-    (\Revision).
+    (\Review).
 %\end{etaremune}
 \end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ Patent}{Patent}}
