--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,6 +14,11 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    SD. Zuo, \Shaoqing, Y. Ren. (2019).
+    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
+    \textit{Journal of Cleaner Production}. \textit{Accepted}.
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
+\item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
@@ -104,16 +109,29 @@
 %\begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, Y. Ren.
-   A theoretical framework for uncertainty analysis of CO$_2$ emissions gridded maps. 
-    (\Submitted).
-\item
-    \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
-    Improving non-representative-sample prediction of forest aboveground biomass maps: A combined machine learning and spatial statistical approach. 
+    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
+   \textit{Scientific Reports}.
     (\Review).
 \item
-    SD. Zuo, \Shaoqing, Y. Ren.
-    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
-    (\Revision).
+    \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
+    Improving prediction of forest aboveground biomass maps: A combined approach of machine learning with spatial statistical model.
+    \textit{Biogeosciences}. 
+    (\Review).
+\item
+    \Shaoqing, SD. Zuo, Y. Ren.
+    A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
+    \textit{Data in Brief}. 
+    (\Submitted).
+\item
+    PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
+    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
+    \textit{Journal of Hydrology}.
+    (\Review).
+\item
+    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
+    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
+    \textit{Geoderma}.
+    (\Review).
 %\end{etaremune}
 \end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ 专利}{专利}}
@@ -122,7 +140,7 @@
 \item
      任引, {\heiti{戴劭勍}}, 左舒翟, 郑小曼.
      一种多源数据融合的森林资源清查生物量估算模型.
-     ({\songtix{受理}}).
+     ({\songtix{实审}}).
 \item
      陈奇, 任引, 郑小曼, 左舒翟, {\heiti{戴劭勍}}.
      一种预测大面积亚热带森林生物量的混合效应模型.
