--- a/publications.tex
+++ b/publications.tex
@@ -13,6 +13,11 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    SD. Zuo, \Shaoqing, Y. Ren. (2019).
+    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
+    \textit{Journal of Cleaner Production}. \textit{Accepted}.
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
+\item
     PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
     \textit{Acta Scientiae Circumstantiae}. \textit{39}(7), 2398-2409.
@@ -103,16 +108,30 @@
 %\begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, Y. Ren.
-   A theoretical framework for uncertainty analysis of CO$_2$ emissions gridded maps. 
-    (\Revision).
+    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
+   \textit{Scientific Reports}.
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
-    Improving non-representative-sample prediction of forest aboveground biomass maps: A combined machine learning and spatial statistical approach. 
+    Improving prediction of forest aboveground biomass maps: A combined approach of machine learning with spatial statistical model.
+    \textit{Biogeosciences}. 
     (\Review).
 \item
-    SD. Zuo, \Shaoqing, Y. Ren.
-    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
+    \Shaoqing, SD. Zuo, Y. Ren.
+    A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
+    \textit{Data in Brief}. 
+    (\Submitted).
+\item
+    PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
+    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
+    \textit{Journal of Hydrology}.
     (\Review).
+\item
+    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
+    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
+    \textit{Geoderma}.
+    (\Review).
+
 %\end{etaremune}
 \end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ Patent}{Patent}}
@@ -121,7 +140,7 @@
 \item
      Y. Ren, \Shaoqing, SD. Zuo, XM. Zheng.
      A forest inventory biomass estimation model by multi-sources data fusion .
-     (\textit{accepted}).
+     (\Review)
 \item
      Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
